# zhenEngine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: glad.c.9025AD46BAAE8566.idx  glad.h.69DE2DDFF1C9CC4A.idx  khrplatform.h.86A382D79802BE15.idx  main.cpp.CB8404AFE540296E.idx
include/: terminal_colors.h
source/: glad.c  main.cpp
